--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
+== Hack Upon a Cause
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+survey web app created for NewCourse - https://anewcourse.org - by: 
+- vipyne - https://github.com/vipyne
+- pdarden - https://github.com/pdarden
+- Aphin715 - https://github.com/Aphin715
+- ryanslee - https://github.com/ryanslee
+- anna.marie.clifton@gmail.com
